--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
   align-items: center;
   justify-content: center;
   margin: 0;
+  background: linear-gradient(#e66465, #9198e5);
 }
 .panel:nth-of-type(1) {
   background-image: url(https://images.pexels.com/photos/206359/pexels-photo-206359.jpeg?cs=srgb&dl=pexels-pixabay-206359.jpg&fm=jpg);
